// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNavigation renders 1`] = `
<SideNavigation
  accordion={true}
  verticalSpacing={3}
>
  <div
    className="container"
  >
    <nav
      className="verticalPadding-3 topPosition"
    >
      <ul
        className="spaced"
      >
        <li
          className="navLi"
          key=".0"
        >
          <Link
            active={false}
            href="#"
            reactRouterLinkComponent={null}
            subMenuLink={false}
            to={null}
          >
            <a
              className="link"
              href="#"
              to={null}
            >
              <Box
                dangerouslyAddClassName="box"
                horizontal={3}
                inline={false}
                tag="div"
                vertical={3}
              >
                <div
                  className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-3___Fsv37 box"
                >
                  <ColoredTextProvider
                    colorClassName="hover"
                  >
                    <div
                      className="hover"
                    >
                      <Text
                        block={false}
                        bold={false}
                        invert={false}
                        size="medium"
                      >
                        <span
                          className="TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__mediumFont___XMrRj TDS_Typography-modules__inheritColor___SREX0"
                        >
                          Home
                        </span>
                      </Text>
                    </div>
                  </ColoredTextProvider>
                </div>
              </Box>
            </a>
          </Link>
        </li>
        <li
          className="navLi"
          key=".1"
        >
          <Link
            active={false}
            href="#one"
            reactRouterLinkComponent={null}
            subMenuLink={false}
            to={null}
          >
            <a
              className="link"
              href="#one"
              to={null}
            >
              <Box
                dangerouslyAddClassName="box"
                horizontal={3}
                inline={false}
                tag="div"
                vertical={3}
              >
                <div
                  className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-3___Fsv37 box"
                >
                  <ColoredTextProvider
                    colorClassName="hover"
                  >
                    <div
                      className="hover"
                    >
                      <Text
                        block={false}
                        bold={false}
                        invert={false}
                        size="medium"
                      >
                        <span
                          className="TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__mediumFont___XMrRj TDS_Typography-modules__inheritColor___SREX0"
                        >
                          One
                        </span>
                      </Text>
                    </div>
                  </ColoredTextProvider>
                </div>
              </Box>
            </a>
          </Link>
        </li>
        <li
          className="navLi"
          key=".2"
        >
          <Link
            active={false}
            href="#two"
            reactRouterLinkComponent={null}
            subMenuLink={false}
            to={null}
          >
            <a
              className="link"
              href="#two"
              to={null}
            >
              <Box
                dangerouslyAddClassName="box"
                horizontal={3}
                inline={false}
                tag="div"
                vertical={3}
              >
                <div
                  className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-3___Fsv37 box"
                >
                  <ColoredTextProvider
                    colorClassName="hover"
                  >
                    <div
                      className="hover"
                    >
                      <Text
                        block={false}
                        bold={false}
                        invert={false}
                        size="medium"
                      >
                        <span
                          className="TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__mediumFont___XMrRj TDS_Typography-modules__inheritColor___SREX0"
                        >
                          Two
                        </span>
                      </Text>
                    </div>
                  </ColoredTextProvider>
                </div>
              </Box>
            </a>
          </Link>
        </li>
        <li
          className="navLi"
          key=".3"
        >
          <SubMenu
            active={false}
            handleToggleSubMenu={[Function]}
            id="TDS-SideNavigation-3"
            isOpen={false}
            label="Threefdsfdsfds"
            onClick={[Function]}
          >
            <div
              className="mainDiv"
            >
              <button
                className="buttonSubMenu buttonDefault"
                handleToggleSubMenu={[Function]}
                id="TDS-SideNavigation-3"
                onClick={[Function]}
              >
                <Box
                  dangerouslyAddClassName="space"
                  horizontal={2}
                  inline={true}
                  tag="div"
                  vertical={3}
                >
                  <div
                    className="TDS_Box-modules__horizontalPadding-2___3hmwJ TDS_Box-modules__verticalPadding-3___Fsv37 space"
                  >
                    <ColoredTextProvider
                      colorClassName={null}
                    >
                      <div>
                        <Text
                          block={false}
                          bold={false}
                          invert={false}
                          size="medium"
                        >
                          <span
                            className="TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__mediumFont___XMrRj TDS_Typography-modules__inheritColor___SREX0"
                          >
                            Threefdsfdsfds
                          </span>
                        </Text>
                      </div>
                    </ColoredTextProvider>
                    <DecorativeIcon
                      size={16}
                      symbol="caretDown"
                      variant="secondary"
                    >
                      <Icon
                        aria-hidden="true"
                        size={16}
                        symbol="caretDown"
                        variant="secondary"
                      >
                        <i
                          aria-hidden="true"
                          className="TDS_Icon-modules__iconCaretDown___3by8b TDS_Icon-modules__icon___13xYd TDS_Icon-modules__secondary___3Gtcp TDS_Icon-modules__size16___1pm12"
                        />
                      </Icon>
                    </DecorativeIcon>
                  </div>
                </Box>
              </button>
              <Reveal
                duration={500}
                height={0}
                in={false}
                timeout={0}
              >
                <Transition
                  appear={false}
                  duration={500}
                  enter={true}
                  exit={true}
                  in={false}
                  mountOnEnter={false}
                  onEnter={[Function]}
                  onEntered={[Function]}
                  onEntering={[Function]}
                  onExit={[Function]}
                  onExited={[Function]}
                  onExiting={[Function]}
                  timeout={0}
                  unmountOnExit={false}
                >
                  <div
                    aria-hidden={true}
                    data-testid="childrenContainer"
                    style={
                      Object {
                        "height": 0,
                        "overflow": "hidden",
                        "transition": "height 500ms",
                        "visibility": "hidden",
                      }
                    }
                  >
                    <ul
                      className="subMenuDropDown"
                    >
                      <li
                        key=".0"
                      >
                        <Link
                          active={false}
                          href="#"
                          reactRouterLinkComponent={null}
                          subMenuLink={true}
                          to={null}
                        >
                          <a
                            className="link"
                            href="#"
                            to={null}
                          >
                            <Box
                              dangerouslyAddClassName="box"
                              horizontal={3}
                              inline={false}
                              tag="div"
                              vertical={2}
                            >
                              <div
                                className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-2___1Uh2T box"
                              >
                                <ColoredTextProvider
                                  colorClassName="hover"
                                >
                                  <div
                                    className="hover"
                                  >
                                    <Text
                                      block={false}
                                      bold={false}
                                      invert={false}
                                      size="small"
                                    >
                                      <span
                                        className="TDS_Typography-modules__small___mt5lS TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__smallFont___3S6nz TDS_Typography-modules__inheritColor___SREX0"
                                      >
                                        Option 1
                                      </span>
                                    </Text>
                                  </div>
                                </ColoredTextProvider>
                              </div>
                            </Box>
                          </a>
                        </Link>
                      </li>
                      <li
                        key=".1"
                      >
                        <Link
                          active={false}
                          href="#"
                          reactRouterLinkComponent={null}
                          subMenuLink={true}
                          to={null}
                        >
                          <a
                            className="link"
                            href="#"
                            to={null}
                          >
                            <Box
                              dangerouslyAddClassName="box"
                              horizontal={3}
                              inline={false}
                              tag="div"
                              vertical={2}
                            >
                              <div
                                className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-2___1Uh2T box"
                              >
                                <ColoredTextProvider
                                  colorClassName="hover"
                                >
                                  <div
                                    className="hover"
                                  >
                                    <Text
                                      block={false}
                                      bold={false}
                                      invert={false}
                                      size="small"
                                    >
                                      <span
                                        className="TDS_Typography-modules__small___mt5lS TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__smallFont___3S6nz TDS_Typography-modules__inheritColor___SREX0"
                                      >
                                        Option 2
                                      </span>
                                    </Text>
                                  </div>
                                </ColoredTextProvider>
                              </div>
                            </Box>
                          </a>
                        </Link>
                      </li>
                      <li
                        key=".2"
                      >
                        <Link
                          active={false}
                          href="#"
                          reactRouterLinkComponent={null}
                          subMenuLink={true}
                          to={null}
                        >
                          <a
                            className="link"
                            href="#"
                            to={null}
                          >
                            <Box
                              dangerouslyAddClassName="box"
                              horizontal={3}
                              inline={false}
                              tag="div"
                              vertical={2}
                            >
                              <div
                                className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-2___1Uh2T box"
                              >
                                <ColoredTextProvider
                                  colorClassName="hover"
                                >
                                  <div
                                    className="hover"
                                  >
                                    <Text
                                      block={false}
                                      bold={false}
                                      invert={false}
                                      size="small"
                                    >
                                      <span
                                        className="TDS_Typography-modules__small___mt5lS TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__smallFont___3S6nz TDS_Typography-modules__inheritColor___SREX0"
                                      >
                                        Option 3
                                      </span>
                                    </Text>
                                  </div>
                                </ColoredTextProvider>
                              </div>
                            </Box>
                          </a>
                        </Link>
                      </li>
                    </ul>
                  </div>
                </Transition>
              </Reveal>
            </div>
          </SubMenu>
        </li>
      </ul>
    </nav>
  </div>
</SideNavigation>
`;

exports[`SideNavigation renders without vertical spacing 1`] = `
<SideNavigation
  accordion={true}
>
  <div
    className="container"
  >
    <nav
      className="topPosition"
    >
      <ul
        className="spaced"
      >
        <li
          className="navLi"
          key=".0"
        >
          <Link
            active={false}
            href="#"
            reactRouterLinkComponent={null}
            subMenuLink={false}
            to={null}
          >
            <a
              className="link"
              href="#"
              to={null}
            >
              <Box
                dangerouslyAddClassName="box"
                horizontal={3}
                inline={false}
                tag="div"
                vertical={3}
              >
                <div
                  className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-3___Fsv37 box"
                >
                  <ColoredTextProvider
                    colorClassName="hover"
                  >
                    <div
                      className="hover"
                    >
                      <Text
                        block={false}
                        bold={false}
                        invert={false}
                        size="medium"
                      >
                        <span
                          className="TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__mediumFont___XMrRj TDS_Typography-modules__inheritColor___SREX0"
                        >
                          Home
                        </span>
                      </Text>
                    </div>
                  </ColoredTextProvider>
                </div>
              </Box>
            </a>
          </Link>
        </li>
        <li
          className="navLi"
          key=".1"
        >
          <SubMenu
            active={true}
            handleToggleSubMenu={[Function]}
            id="TDS-SideNavigation-1"
            isOpen={true}
            label="Threefdsfdsfds"
            onClick={[Function]}
          >
            <div
              className="mainDiv"
            >
              <button
                className="buttonSubMenu active"
                handleToggleSubMenu={[Function]}
                id="TDS-SideNavigation-1"
                onClick={[Function]}
              >
                <Box
                  dangerouslyAddClassName="space"
                  horizontal={2}
                  inline={true}
                  tag="div"
                  vertical={3}
                >
                  <div
                    className="TDS_Box-modules__horizontalPadding-2___3hmwJ TDS_Box-modules__verticalPadding-3___Fsv37 space"
                  >
                    <ColoredTextProvider
                      colorClassName={null}
                    >
                      <div>
                        <Text
                          block={false}
                          bold={true}
                          invert={false}
                          size="medium"
                        >
                          <span
                            className="TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__boldFont___2YS3O TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__inheritColor___SREX0"
                          >
                            Threefdsfdsfds
                          </span>
                        </Text>
                      </div>
                    </ColoredTextProvider>
                    <DecorativeIcon
                      size={16}
                      symbol="caretUp"
                      variant="secondary"
                    >
                      <Icon
                        aria-hidden="true"
                        size={16}
                        symbol="caretUp"
                        variant="secondary"
                      >
                        <i
                          aria-hidden="true"
                          className="TDS_Icon-modules__iconCaretUp___3PL_K TDS_Icon-modules__icon___13xYd TDS_Icon-modules__secondary___3Gtcp TDS_Icon-modules__size16___1pm12"
                        />
                      </Icon>
                    </DecorativeIcon>
                  </div>
                </Box>
              </button>
              <Reveal
                duration={500}
                height={0}
                in={true}
                timeout={500}
              >
                <Transition
                  appear={false}
                  duration={500}
                  enter={true}
                  exit={true}
                  in={true}
                  mountOnEnter={false}
                  onEnter={[Function]}
                  onEntered={[Function]}
                  onEntering={[Function]}
                  onExit={[Function]}
                  onExited={[Function]}
                  onExiting={[Function]}
                  timeout={500}
                  unmountOnExit={false}
                >
                  <div
                    aria-hidden={false}
                    data-testid="childrenContainer"
                    style={
                      Object {
                        "height": "0px",
                        "overflow": "hidden",
                        "transition": "height 500ms",
                      }
                    }
                  >
                    <ul
                      className="subMenuDropDown"
                    >
                      <li
                        key=".0"
                      >
                        <Link
                          active={false}
                          href="#"
                          reactRouterLinkComponent={null}
                          subMenuLink={true}
                          to={null}
                        >
                          <a
                            className="link"
                            href="#"
                            to={null}
                          >
                            <Box
                              dangerouslyAddClassName="box"
                              horizontal={3}
                              inline={false}
                              tag="div"
                              vertical={2}
                            >
                              <div
                                className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-2___1Uh2T box"
                              >
                                <ColoredTextProvider
                                  colorClassName="hover"
                                >
                                  <div
                                    className="hover"
                                  >
                                    <Text
                                      block={false}
                                      bold={false}
                                      invert={false}
                                      size="small"
                                    >
                                      <span
                                        className="TDS_Typography-modules__small___mt5lS TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__smallFont___3S6nz TDS_Typography-modules__inheritColor___SREX0"
                                      >
                                        Option 1
                                      </span>
                                    </Text>
                                  </div>
                                </ColoredTextProvider>
                              </div>
                            </Box>
                          </a>
                        </Link>
                      </li>
                    </ul>
                  </div>
                </Transition>
              </Reveal>
            </div>
          </SubMenu>
        </li>
      </ul>
    </nav>
  </div>
</SideNavigation>
`;
